<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ar.edu.utn.frsf.isi.dam.MainActivity">

    <TextView
        android:text="@string/calculadora_plazo_fijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailL"
        android:id="@+id/emailL"
        android:layout_below="@+id/text1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/emailL"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CUITL"
        android:id="@+id/CUITL"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CUIT"
        android:layout_below="@+id/CUITL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montoL"
        android:id="@+id/montoL"
        android:layout_below="@+id/CUIT"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/monto"
        android:layout_below="@+id/montoL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diasL"
        android:id="@+id/diasL"
        android:layout_below="@+id/monto"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarDias"
        android:max="364"
        android:progress="1"
        android:indeterminate="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diasSelecL"
        android:id="@+id/diasSelect"
        android:layout_below="@+id/seekBarDias"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rendimientoL"
        android:id="@+id/rendimientoL"
        android:layout_below="@+id/diasSelect"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rendimiento"
        android:id="@+id/rendimiento"
        android:layout_below="@+id/rendimientoL"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxL"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_below="@+id/rendimiento"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBoton"
        android:id="@+id/button"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true" />

</RelativeLayout>
